Finish Logistic Regression with 98% accuracy

--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.9800995024875622\n"
+      "Accuracy:  0.9800995024875622\n",
+      "CPU times: user 1.52 s, sys: 345 ms, total: 1.86 s\n",
+      "Wall time: 1.05 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# 75-25% split\n",
     "train_len = 600\n",
     "log_reg = LogisticRegression(data[:train_len], labels[:train_len], 1)\n",
